# boubougine

./: CMakeLists.txt  LICENSE  README.md
src/: camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h
